--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
-    <link rel="stylesheet" href="/assets/css/styles.css">
+    <link rel="stylesheet" href="/assets/css/styles.css" />
 
     <link
       rel="icon"
@@ -23,9 +23,10 @@
       .attribution {
         font-size: 11px;
         text-align: center;
+        color: white;
       }
       .attribution a {
-        color: hsl(228, 45%, 44%);
+        color: white;
       }
     </style>
   </head>
@@ -62,12 +63,22 @@
 
           <section>
             <form action="submit" class="form" id="form-newsletter">
-              <label for="email" class="form__label">Email address</label>
-              <div class="form__error-message hidden">
-                <p class="form__error-message">Valid email required</p>
+              <div class="form__label-and-validation">
+                <label for="email" class="form__label">Email address</label>
+                <span class="form__error-message hidden"
+                  >Valid email required
+                </span>
               </div>
-              <input name="email" id="email" class="form__input" placeholder="email@company.com" required />
-              <button class="form__button" type="submit">Subscribe to monthly newsletter</button>
+              <input
+                name="email"
+                id="email"
+                class="form__input"
+                placeholder="email@company.com"
+                required
+              />
+              <button class="form__button" type="submit">
+                Subscribe to monthly newsletter
+              </button>
             </form>
           </section>
         </main>
@@ -75,15 +86,21 @@
 
       <section class="section--success hidden">
         <header class="section--success__header">
-          <h1 class="section--success__header__text">Thanks for subscribing!</h1>
+          <img src="/assets/images/icon-success.svg" alt="icon-success" />
+          <h1 class="section--success__header__text">
+            Thanks for subscribing!
+          </h1>
         </header>
 
         <main class="section--success__main">
           <p class="section--success__main__text">
-            A confirmation email has been sent to ash@loremcompany.com. Please
-            open it and click the button inside to confirm your subscription.
+            A confirmation email has been sent to
+            <strong>ash@loremcompany.com</strong>. Please open it and click the
+            button inside to confirm your subscription.
           </p>
-          <button class="section--success__main__button">Dismiss message</button>
+          <button class="section--success__main__button">
+            Dismiss message
+          </button>
         </main>
       </section>
     </main>
