show submitted email

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <main class="section--success__main">
           <p class="section--success__main__text">
             A confirmation email has been sent to
-            <strong>ash@loremcompany.com</strong>. Please open it and click the
+            <strong id="submitted-email">ash@loremcompany.com</strong>. Please open it and click the
             button inside to confirm your subscription.
           </p>
           <button class="section--success__main__button">
